Smart path backend code
UI improvements
